# ormantic

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
ormantic/: __init__.py  errors.py  express.py  fields.py  model.py  operators.py  query.py  typing.py  utils.py
ormantic/dialects/: bases.py  dbapi.py
ormantic/dialects/mysql/: __init__.py  aiosession.py  client.py  engine.py  query.py  session.py
ormantic/dialects/pg/: query.py  session.py
ormantic/dialects/postgresql/: query.py  session.py
tests/: conftest.py  test_express.py  test_model.py  test_mysql_aiosession.py  test_mysql_async_demo.py  test_mysql_demo.py  test_mysql_engine.py  test_mysql_express.py  test_mysql_query.py  test_mysql_session.py  test_mysql_sync_demo.py  test_orm_express.py  test_orm_fields.py  test_orm_model.py  test_orm_operator.py  test_orm_query.py  test_postgresql_query.py  test_postgresql_session.py
