[project]
name = "ormantic"
version = "0.1.0"
description = "An ORM for a relational database"
authors = [{ name = "lolord", email = "lolord.cn@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["ORM", "pydantic"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

requires-python = ">=3.11"

dependencies = ["pydantic~=1.10"]

[project.optional-dependencies]
optional = ["aiomysql>=0.2.0", "loguru==0.7.2"]
[tool.coverage.run]
branch = true
omit = ["ormantic/schemas.py"]


[tool.coverage.report]
include = ["ormantic/*.py"]

omit = ["**/conftest.py"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@pytest.mark.skip",
    "def __repr__.*",
    "def __copy__.*",
    "def __str__.*",
    "def __hash__.*",
    "def __pos__.*",
    "raise NotImplementedError",
]


[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]

linting = ["eval-type-backport>=0.1.3", "ruff==0.2.2", "mypy~=1.1.1"]
testing = ["coverage[toml]", "pytest", "pytest-asyncio>=0.23.5"]
mypy = ["mypy"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]

reportIncompatibleMethodOverride = false


[tool.codespell]
skip = '.git,env*'
ignore-words-list = 'nin,NIN'



[tool.pytest.ini_options]
markers =[
    "orm: mark a test orm."
]
